# fea_demo

./: README.md  build.sh  download_eigen.sh  run_tests.sh
data/: mesh_coarse.k  mesh_simple.k
scripts/: postprocess.py
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  element.hpp  geometry.cpp  geometry.hpp  linearTriangle.cpp  linearTriangle.hpp  solver.cpp  solver.hpp
src/unittests/: CMakeLists.txt
src/unittests/core/: test_geometry.cpp  test_linearTriangle.cpp  test_solver.cpp
